crates/sifr_python_parser/tests/snapshots/invalid_syntax@expressions__emoji_statement.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/invalid/expressions/emoji_statement.py
---
## AST

```
Module(
    ModModule {
        range: 0..5,
        body: [],
    },
)
```
## Errors

  |
1 | 👍
  | ^^ Syntax Error: Got unexpected token 👍
  |
